--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
         "resolve-url-loader": "^3.1.0",
-        "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
+        "sass": "^1.63.4",
+        "sass-loader": "^8.0.2",
+        "vue-template-compiler": "^2.7.14"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.8",
+        "bootstrap": "^5.3.0"
     }
 }
